--- a/.eslintrc
+++ b/.eslintrc
@@ -4,7 +4,7 @@
     "braintree/es6"
   ],
   "parserOptions": {
-    "sourceType": "module"
+    "sourceType": "script"
   },
   "env": {
     "es6": true,
