--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "es6-shim": "^0.35.5",
     "eslint": "^6.8.0",
     "eslint-config-braintree": "^4.0.0",
+    "eslint-loader": "^3.0.3",
     "fancy-log": "^1.3.3",
     "filemanager-webpack-plugin": "^2.0.5",
     "gulp": "^4.0.2",
@@ -63,6 +64,7 @@
     "jsdoc": "^3.6.3",
     "jsdoc-template": "braintree/jsdoc-template#3.2.0",
     "jsdoc-webpack-plugin": "^0.3.0",
+    "less": "^3.11.1",
     "less-loader": "^5.0.0",
     "mini-css-extract-plugin": "^0.9.0",
     "mkdirp": "^1.0.3",
